{
    "name": "PongInputs",
    "maps": [
        {
            "name": "RaquetteLeft",
            "id": "e70dcf52-38db-4ced-a0ff-78437f8acd75",
            "actions": [
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "a54d95db-0f7a-4417-9724-3e86001f2d60",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "cb8a995c-527a-45ab-a1b9-5e2747f4aa8f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "336d8a75-76c3-44be-8f38-fe30ec732ce8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20ec6363-6b21-434d-9413-77a3c1ee9e86",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "RaquetteRight",
            "id": "ac416db8-a981-4a4e-aabc-7ec29ce5d914",
            "actions": [
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "a790c3ea-afcf-4117-a07d-5c7410836ba5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "c004ec96-70aa-4e03-af2d-57952d1dd13f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "978262b5-0bc2-4a75-b840-71b9d223ee8f",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "894a2424-a62d-417a-93c6-345a329d0896",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Actions",
            "id": "93418d36-2847-4a88-afd1-7265389d2dda",
            "actions": [
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "df8368fe-9f7f-4f24-a3a0-4d18943686f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "13cf8a99-4f87-43a5-b40c-daa92c6fc192",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2595d300-5008-4e5d-89e0-8ca1ca0e046c",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "58adc99a-c6be-4f14-bf37-e50777208402",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d9d5d63-e0bc-4197-b015-e874a736d482",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}